--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,7 @@
   "author": "akshay m m",
   "license": "ISC",
   "dependencies": {
-
-   
-    "@ajayos/nodemon": "^0.0.5",
-
+    "@ajayos/nodemon": "github:ajayos/nodemon",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
